Adicionado metodo getTransactionByNotificationCode e realizada alteração para que o send passe a retornar um objeto json ao invés de XML

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "dependencies": {
         "request": "2.9.x",
+        "node-xml2json": "^1.0.0",
         "jstoxml": "0.1.x"
     },
     "devDependencies": {
